# Vivawest_Nebenkosten_Scraper

./: .editorconfig  .gitignore  .jsonlintrc  .trivyignore  Dockerfile  README.md  cronjob.txt  cspell.json  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  run-autoformatting.sh  run-docker-container-dev.sh  run-docker-container-ghcr.sh  run-docker-container.sh  run-poetry-update.sh  run-pylint.sh
.devcontainer/: postCreateCommand.sh
.github/: dependabot.yml  run-super-linter-locally.sh  super-linter-locally.env
.github/linters/: .hadolint.yaml
.github/workflows/: docker-image.yml  githubnext-create-diagram.yml  keep-github-actions-alive.yml  linter-github-action.yml  linter.yml  megalinter.yml  reformat-code.yml  test-runner.yml  update-requirements-txt.yml
source/: app.py  data_extraction.py  data_extraction_section_creator.py  main.py  scraping.py  selenium_code.py
source/resources/: html_head_style.html
tests/: test_data_extraction.py  test_data_extraction_section_creator.py  test_vivawest_scraper.py
tests/resources/: scrape_site_result.html  scrape_site_result_with_liegenschaft.html  scrape_site_result_without_liegenschaft.html  selenium_code_first_step_result.html  selenium_code_second_step_result.html
