[tool.poetry]
name = "Vivawest_scraper"
version = "0.1.0"
description = ""
authors = ["floriankretschmer <entepotenz@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
selenium = "4.43.0"
requests = "2.33.1"

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
yapf = "0.43.0"
toml = "0.10.2"
mypy = "1.20.1"
flake8 = "7.3.0"
ruff = "0.15.11"
types-requests = "2.33.0.20260408"
pre-commit = "4.6.0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
