[tool.poetry]
name = "Vivawest_scraper"
version = "0.1.0"
description = ""
authors = ["floriankretschmer <entepotenz@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
selenium = "4.44.0"
requests = "2.34.2"

[tool.poetry.group.dev.dependencies]
black = "26.5.0"
yapf = "0.43.0"
toml = "0.10.2"
mypy = "1.20.2"
flake8 = "7.3.0"
ruff = "0.15.13"
types-requests = "2.33.0.20260518"
pre-commit = "4.6.0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

# https://cooldowns.dev/#poetry
[solver]
min-release-age = 3
